<resources>
    <string name="app_name">Food Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="logging">Logging</string>
    <string name="food">Food</string>
    <string name="kcal">Kcal</string>
    <string name="_99999">99999</string>
    <string name="total">Total</string>
    <string name="food_name">Food name</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="snacks">Snacks</string>
    <string name="dinner">Dinner</string>
    <string name="exercise">Exercise</string>
    <string name="data">Data</string>
    <string name="daily">Daily</string>
    <string name="statistics">Statistics</string>
    <string name="monthly">Monthly</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="selected_food">Selected Food</string>
    <string name="food_description">Food Description</string>
    <string name="food_stats">Food Stats</string>
    <string name="calories">Calories</string>
    <string name="_9999kcal">9999 Kcal</string>
    <string name="carbs">Carbs</string>
    <string name="_999_g">999 g</string>
    <string name="fiber">Fiber</string>
    <string name="sugars">Sugars</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="unsaturated_fat">Unsaturated Fat</string>
    <string name="other">Other</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="potassium">Potassium</string>
    <string name="iron">Iron</string>
    <string name="vitamin_d">Vitamin D</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="food_details">Food Details</string>
    <string name="g">g</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed adipiscing diam donec adipiscing. Mi quis hendrerit dolor magna eget. Aliquam etiam erat velit scelerisque in dictum. Commodo ullamcorper a lacus vestibulum sed</string>
    <string name="create">Create</string>
    <string name="food_serving">Food Serving</string>
    <string name="goals">Goals</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="non_binary">Non binary</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="activity">Activity</string>
    <string name="details">Details</string>
    <string name="extreme_weight_loss">Extreme weight loss \n1Kg/week</string>
    <string name="weight_loss">Weight Loss \n0.5Kg/week</string>
    <string name="mild_weight_loss">Mild weight loss \n0.25Kg/week</string>
    <string name="maintain_weight">Maintain weight</string>
    <string name="mild_weight_gain">Mild weight gain \n0.25Kg/week</string>
    <string name="weight_gain">Weight gain \n0.5Kg/week</string>
    <string name="extreme_weight_gain">Extreme weight gain \n1Kg/week</string>
    <string name="meal_plans">Meal plans</string>
    <string name="salt">Salt</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="years">yrs</string>
    <string name="header_image_for_the_page">header image for the page</string>
    <string name="button_to_decrease_date_by_one">It is used to decrease date by one</string>
    <string name="button_to_increase_date_by_one">It is used to increase date by one</string>
    <string name="this_is_used_to_display_the_current_selected_date_clicking_on_it_will_open_a_day_picker_dialog">This is used to display the current chosen date. Clicking on it will open a day picker dialog</string>
    <string name="_0">0</string>
    <string name="various_activity_levels_can_be_chosen_from_this">Various activity levels can be chosen from this</string>
    <string name="lists_various_units_used_to_define_a_serving">Lists various units used to define a serving</string>
    <string name="use_it_to_choose_the_food_to_be_entered_into_the_log">Use it to choose the food to be entered into the log</string>
    <string name="choose_the_type_of_food_log">Choose the type of food log</string>
    <string name="used_to_add_a_food_log">Used to add a food log</string>
    <string name="icon_for_a_food_log">Icon for a food log</string>
</resources>
