<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:title="@string/home" />


    <item
        android:title="@string/logging">

        <menu>
            <item
                android:id="@+id/logFoodFragment"
                android:icon="@drawable/food"
                android:title="@string/food" />
            <item
                android:id="@+id/logExerciseFragment"
                android:icon="@drawable/exercise"
                android:title="@string/exercise" />
        </menu>

    </item>

    <item
        android:title="@string/data">
        <menu>
            <item
                android:id="@+id/listFoodFragment"
                android:icon="@drawable/food"
                android:title="@string/food" />
            <item
                android:id="@+id/listExerciseFragment"
                android:icon="@drawable/exercise"
                android:title="@string/exercise" />
        </menu>

    </item>

    <item
        android:title="@string/statistics">
        <menu>
            <item
                android:id="@+id/statsDailyFragment"
                android:icon="@drawable/daily"
                android:title="@string/daily" />
            <item
                android:id="@+id/statsMonthlyFragment"
                android:icon="@drawable/monthly"
                android:title="@string/monthly" />
        </menu>

    </item>
    <item android:title="@string/details">
        <menu>
            <item
                android:id="@+id/goalsFragment"
                android:icon="@drawable/goals"
                android:title="@string/goals" />
        </menu>
    </item>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/settingsFragment"
                android:icon="@drawable/settings"
                android:title="@string/settings" />
        </menu>
    </item>



</menu>