<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="goalsVM"
            type="com.kinetx.foodtracker.viewmodel.GoalsVM" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".fragment.GoalsFragment">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/azure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/goals"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/goals_personal_details"
            style="@style/material_card"
            android:layout_marginStart="16dp"
            android:layout_marginTop="192dp"
            android:layout_marginEnd="16dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout style="@style/material_card_constraint">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/material_card_subtitle"
                    android:text="@string/age"
                    app:layout_constraintBottom_toTopOf="@+id/goals_age"
                    app:layout_constraintStart_toStartOf="@+id/goals_age" />

                <EditText
                    android:id="@+id/goals_age"
                    style="@style/material_card_edit_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:inputType="number"
                    android:maxLength="3"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/material_card_subtitle"
                    android:layout_marginBottom="8dp"
                    android:text="@string/gender"
                    app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                    app:layout_constraintStart_toStartOf="@+id/radioGroup" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="128dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/azure"
                        android:text="@string/male"
                        android:textColor="@color/black" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/azure"
                        android:text="@string/female"
                        android:textColor="@color/black" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/azure"
                        android:text="@string/non_binary"
                        android:textColor="@color/black" />

                </RadioGroup>

                <TextView
                    android:id="@+id/textView8"
                    style="@style/material_card_subtitle"
                    android:text="@string/height"
                    app:layout_constraintBottom_toTopOf="@+id/goals_height"
                    app:layout_constraintStart_toStartOf="@+id/goals_height" />

                <EditText
                    android:id="@+id/goals_height"
                    style="@style/material_card_edit_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:maxLength="3"
                    android:inputType="number"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/radioGroup"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/material_card_subtitle"
                    android:text="@string/weight"
                    app:layout_constraintBottom_toTopOf="@+id/goals_height"
                    app:layout_constraintStart_toStartOf="@+id/goals_weight" />

                <EditText
                    android:id="@+id/goals_weight"
                    style="@style/material_card_edit_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:maxLength="3"
                    android:inputType="number"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/goals_vertical_guide"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/goals_vertical_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent="0.5"
                    app:layout_constraintStart_toStartOf="parent" />


                <TextView
                    style="@style/material_card_subtitle"
                    android:layout_marginBottom="8dp"
                    android:text="@string/activity"
                    app:layout_constraintBottom_toTopOf="@+id/goals_activity"
                    app:layout_constraintStart_toStartOf="@+id/goals_activity" />

                <Spinner
                    android:id="@+id/goals_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="16dp"
                    android:theme="@style/ThemeOverlay.Material3.Light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/goals_height" />

                <Button
                    android:id="@+id/goals_update_details"
                    style="@style/button_normal"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="@color/azure"
                    android:text="@string/update"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/goals_activity" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/goals_meal_plans"
                style="@style/material_card"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/goals_personal_details">

                <androidx.constraintlayout.widget.ConstraintLayout style="@style/material_card_constraint">


                    <TextView
                        style="@style/material_card_title"
                        android:text="@string/meal_plans"
                        app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
                        app:layout_constraintStart_toStartOf="@+id/radioGroup2" />


                    <RadioGroup
                        android:id="@+id/radioGroup2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="48dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/azure"
                            android:text="@string/extreme_weight_loss"
                            android:textColor="@color/black" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/azure"
                            android:text="@string/weight_loss"
                            android:textColor="@color/black" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/azure"
                            android:text="@string/mild_weight_loss"
                            android:textColor="@color/black" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/azure"
                            android:text="@string/maintain_weight"
                            android:textColor="@color/black" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/azure"
                            android:text="@string/mild_weight_gain"
                            android:textColor="@color/black" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/azure"
                            android:text="@string/weight_gain"
                            android:textColor="@color/black" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/azure"
                            android:text="@string/extreme_weight_gain"
                            android:textColor="@color/black" />
                    </RadioGroup>

                    <Button
                        style="@style/button_normal"
                        android:layout_marginTop="32dp"
                        android:backgroundTint="@color/azure"
                        android:text="@string/update"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/goals_meal_plans"
            android:layout_height="50dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>