<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="84dp">

    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/r_food_item_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/food"
                android:backgroundTint="@color/ao"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/icon_for_a_food_log" />

            <TextView
                android:id="@+id/r_food_item_name"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/food_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/r_food_item_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/r_food_item_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/black_700"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/r_food_item_icon"
                app:layout_constraintTop_toBottomOf="@+id/r_food_item_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>