<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/material_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/food_card_rectangle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentTop="true"
                android:background="@color/azure"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/food_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/breakfast"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/food_card_add_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/black"
                android:src="@drawable/ic_baseline_add_24"
                app:layout_constraintBottom_toBottomOf="@+id/food_card_rectangle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/food_card_rectangle" />

            <TextView
                android:id="@+id/food_card_total_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/_99999"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/food_card_title" />

            <TextView
                android:id="@+id/food_card_total_kcal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kcal"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/food_card_total_value"
                app:layout_constraintStart_toEndOf="@+id/food_card_total_value" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/food_card_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/food_card_rectangle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>